# $Id$

2007-08-31
	* _Really_ fix mpd SIGPIPE issues

2007-08-30
	* Conky 1.4.7 released
	* Check for pkg-config >=0.19
	* Use timed_thread for mpd

2007-08-27
	* Fixed issue with SIGPIPE and mpd
	* Updated COPYING (with more clarifications)

2007-08-14
	* Updated vim/nano syntax files.

2007-08-12
	* Added $hwmon var, similar to $i2c and $platform.

2007-08-12
	* Added var $platform which is similar to $i2c and accommodates the conversion
	  of many devices from /sys/bus/i2c/devices to /sys/bus/platform/devices.
	* Removed config item post_21_kernel since it forced all i2c device lookups
	  to go to /sys/bus/platform/devices and some people may need a mix of both
		i2c and platform devices.

2007-08-10
	* Clarifying licensing

2007-08-08
	* RSS support
	* Wireless support for Linux

2007-08-05
	* Conky 1.4.6 released
	* Updated to libmpdclient 0.13.0
	* Added 'post_21_kernel' config param to specify kernels 2.6.22 and newer
	so i2c works properly

2007-08-04
	* Fixed potential issue on FreeBSD when nprocs < 10 (thanks zotrix)
	* Added support for multiple batteries when using acpi (thanks Phil)
	* a bunch of code cleanups (thanks Psychon)
	* added max length paramater to mpd_title (thinks fow)
	* a number of small bug fixes

2007-07-15
	* Fix PID display, patch #1753934.  thanks sohalt.
	* Fix displaying 4 GB traffic after reloading network driver,
			patch #1754260.  thanks sohalt.

2007-06-21
	* Right-justify top/top_mem vars (pid/cpu/mem} so they align on the decimal.

2007-04-25
	* Added color[0-9] variable patch (thanks jieryn)

2007-04-05
	* Added if_empty patch (thanks Erik)
	* Added if_existing patch for string matching (thanks cromka)
	* Added hwmon support (thanks flitsch)
	* Some xmms2 updates (thanks sleipner)
	* Added $battery_percent and $battery_bar (thanks akash)

2007-02-25
	* OpenBSD support added to Conky (thanks hifi)
	* Updated mboxscan stuff (thanks calmar)

2007-02-25
	* Created branch/1.5 copy of trunk/conky1.  Removing all experimental