@@ -2,6 +2,8 @@
 
 2007-08-31
 	* _Really_ fix mpd SIGPIPE issues
+	* Fix timed thread race condition, seen esp. on new kernel scheduler (cfs).
+	* Fix $audacious_title not being displayed when no length argument indicated.
 
 2007-08-30
 	* Conky 1.4.7 released
